Interpretation/tpnote (2)/TPnote/parser.output
   0  $accept : %entry% $end

   1  program : PROCESS AO rule AF ON STR

   2  rule : rule SEMICOL rule
   3       | pattern ARR expr

   4  pattern : CHAR

   5  expr : STR

   6  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (6)

	PROCESS  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : PROCESS . AO rule AF ON STR  (1)

	AO  shift 5
	.  error


state 4
	%entry% : '\001' program .  (6)

	.  reduce 6


state 5
	program : PROCESS AO . rule AF ON STR  (1)

	CHAR  shift 6
	.  error

	rule  goto 7
	pattern  goto 8


state 6
	pattern : CHAR .  (4)

	.  reduce 4


state 7
	program : PROCESS AO rule . AF ON STR  (1)
	rule : rule . SEMICOL rule  (2)

	SEMICOL  shift 9
	AF  shift 10
	.  error


state 8
	rule : pattern . ARR expr  (3)

	ARR  shift 11
	.  error


state 9
	rule : rule SEMICOL . rule  (2)

	CHAR  shift 6
	.  error

	rule  goto 12
	pattern  goto 8


state 10
	program : PROCESS AO rule AF . ON STR  (1)

	ON  shift 13
	.  error


state 11
	rule : pattern ARR . expr  (3)

	STR  shift 14
	.  error

	expr  goto 15


state 12
	rule : rule . SEMICOL rule  (2)
	rule : rule SEMICOL rule .  (2)

	.  reduce 2


state 13
	program : PROCESS AO rule AF ON . STR  (1)

	STR  shift 16
	.  error


state 14
	expr : STR .  (5)

	.  reduce 5


state 15
	rule : pattern ARR expr .  (3)

	.  reduce 3


state 16
	program : PROCESS AO rule AF ON STR .  (1)

	.  reduce 1


11 terminals, 6 nonterminals
7 grammar rules, 17 states
